--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:4d_systems_esp32s3_gen4_r8n16]
-platform = espressif32
+platform = espressif32 @ 6.9.0
 board = 4d_systems_esp32s3_gen4_r8n16
 framework = espidf
 
